--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Makan Apa!",
+  "name": "makanApa",
   "version": "0.0.1",
   "author": "Eat Like Indonesian",
   "homepage": "https://www.eatlikeindonesian.com",
