--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "^5.2.4",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
@@ -33,12 +34,13 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "typescript": "2.4.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project",
+  "description": "Eat Like Indonesian: Makan Apa!",
   "cordova": {
     "plugins": {
       "cordova-plugin-screen-orientation": {}
