--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/pro": "^1.0.19",
     "@ionic/storage": "2.1.3",
     "cordova-plugin-screen-orientation": "^3.0.1",
+    "cordova-sqlite-storage": "^2.2.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -43,7 +44,8 @@
   "description": "Eat Like Indonesian: Makan Apa!",
   "cordova": {
     "plugins": {
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
