--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/native-page-transitions": "^4.5.3",
     "@ionic-native/screen-orientation": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/app-scripts": "^3.1.8",
     "@ionic/pro": "^1.0.19",
     "@ionic/storage": "2.1.3",
+    "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-sqlite-storage": "^2.2.0",
     "ionic-angular": "3.9.2",
@@ -45,7 +47,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-screen-orientation": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "com.telerik.plugins.nativepagetransitions": {}
     }
   }
 }
